fixed field type job 2.del button delete schema (temporary)

--- a/schemagen/templates/schemagen/index.html
+++ b/schemagen/templates/schemagen/index.html
@@ -92,7 +92,7 @@
                          {% for schema in schemas %}
                         <div class="text-white-50" id="div_{{ schema.id }}"> {{ schema }}
                         | <a id="{{ schema.id }}" class="btn_data_gen_">Generate data</a>
-                        | <a href="">delete</a></div>
+                        </div>
                          {% endfor %}
 
                     </div>
